# mpi_solver

./: CMakeLists.txt  example.py  la.h  superlu.cpp  superlu.h  wrapper.cpp
